add_definitions(-DMINIUPNP_STATICLIB)

file(GLOB_RECURSE COMMON common/*)
file(GLOB_RECURSE CRYPTO crypto/*)
file(GLOB_RECURSE CRYPTONOTE_CORE cryptonote_core/*)
file(GLOB_RECURSE CRYPTONOTE_PROTOCOL cryptonote_protocol/*)
file(GLOB_RECURSE DAEMON daemon/*)
file(GLOB_RECURSE P2P p2p/*)
file(GLOB_RECURSE RPC rpc/*)
file(GLOB_RECURSE SIMPLEWALLET simplewallet/*)
file(GLOB_RECURSE CONN_TOOL connectivity_tool/*)
file(GLOB_RECURSE WALLET wallet/*)
file(GLOB_RECURSE MINER miner/*)
file(GLOB_RECURSE RINGCT ringct/*)
file(GLOB_RECURSE AEON_POCKET aeon_pocket/*)

source_group(common FILES ${COMMON})
source_group(crypto FILES ${CRYPTO})
source_group(cryptonote_core FILES ${CRYPTONOTE_CORE})
source_group(cryptonote_protocol FILES ${CRYPTONOTE_PROTOCOL})
source_group(daemon FILES ${DAEMON})
source_group(p2p FILES ${P2P})
source_group(rpc FILES ${RPC})
source_group(ringct FILES ${RINGCT})
source_group(simplewallet FILES ${SIMPLEWALLET})
source_group(connectivity-tool FILES ${CONN_TOOL})
source_group(wallet FILES ${WALLET})
source_group(simpleminer FILES ${MINER})
source_group(aeon_pocket FILES ${AEON_POCKET})

add_library(ringct ${RINGCT})
add_library(common ${COMMON})
add_library(crypto ${CRYPTO})
add_library(cryptonote_core ${CRYPTONOTE_CORE})
add_library(rpc ${RPC})
add_library(wallet ${WALLET})
add_executable(aeon_pocket ${AEON_POCKET})
target_link_libraries(aeon_pocket wallet rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})

#set_property(TARGET common crypto cryptonote_core rpc wallet PROPERTY FOLDER "libs")
#set_property(TARGET daemon simplewallet connectivity_tool simpleminer PROPERTY FOLDER "prog")
#set_property(TARGET daemon PROPERTY OUTPUT_NAME "aeond")
